# Flora_Pac

./: .gitignore  CLAUDE.md  Makefile  README-TESTING.md  README.md  flora_pac  flora_pac.py  flora_pac_web.py  hash_ip.coffee  pyproject.toml  requirements-test.txt  test_runner.py  test_webui_fix.py
flora_pac_lib/: __init__.py  ip_data.py  network_ops.py  pac_generator.py  web_ui.py
tests/: test_basic_functionality.py  test_integration.py  test_integration_modular.py  test_ip_data.py  test_modular_ip_data.py  test_modular_network_ops.py  test_modular_pac_generator.py  test_network_ops.py  test_pac_generation.py  test_simple.py  test_web_ui.py
